--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -320,7 +320,7 @@
                         <div class="form-label">
                             <label class="fw-bold small" for="employeeNote">Note</label>
                         </div>
-                        <textarea class="rounded-0 form-control newEmployeeInputs" cols="80" id="employeeNote" placeholder="Optional" rows="4"></textarea>
+                        <textarea class="rounded-0 form-control newEmployeeInputs" cols="80" id="employeeNote" placeholder="Optional" rows="4"  onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newEmployee','note')"></textarea>
                         <div class="valid-feedback">Value Accepted</div>
                         <div class="invalid-feedback">Please provide a valid Note</div>
                         <div class="text-muted small"><small> a short description which will be useful for the
