--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -337,11 +337,9 @@
 <!-- Off canvas for employee add end-->
 
 <!-- Off canvas for employee details start-->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static"
-     id="offcanvasEmployeeSheet" tabindex="-1">
+<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasEmployeeSheet" tabindex="-1">
     <div class="offcanvas-header bg-light">
-        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
-                type="button"><i class="fas fa-times"></i></button>
+        <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
         <div class="container d-flex gap-3 ms-1" style="width: 55%">
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info </button>
             <button class="btn btn-sm bg-warning rounded-0 text-white"><i class="fa-solid fa-arrows-rotate"></i> Update </button>
