--- a/system/src/main/resources/templates/ims/Dashboard.html
+++ b/system/src/main/resources/templates/ims/Dashboard.html
@@ -255,7 +255,7 @@
     <div class="offcanvas-header bg-light">
         <div>
             <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" id="offCanvasInquiryCloseButton" type="button"><i class="fas fa-times"></i></button>
-            <button class="btn btn-sm bg-secondary text-white rounded-0" type="button"><i class="fas fa-refresh"></i></button>
+            <button class="btn btn-sm bg-secondary text-white rounded-0" type="button" onclick="resetInquiryForm()"><i class="fas fa-refresh"></i></button>
         </div>
         <h3 class="float-end"
             style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New
