--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -291,6 +291,8 @@
                             <option>G.C.E A/L</option>
                             <option>G.C.E O/L</option>
                         </select>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid Highest Educational Qualification</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
