--- a/system/src/main/resources/templates/ims/Dashboard.html
+++ b/system/src/main/resources/templates/ims/Dashboard.html
@@ -416,7 +416,7 @@
 
 <!-- OffCanvas for Inquiry Sheet Start -->
 <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static"
-     id="offcanvasDeafult" tabindex="-1">
+     id="offCanvasInquirySheet" tabindex="-1">
     <div class="offcanvas-header bg-light">
         <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0"
                 data-bs-dismiss="offcanvas" id="offCanvasInquirySheetCloseButton"
