--- a/system/src/main/resources/templates/ims/Inquiries.html
+++ b/system/src/main/resources/templates/ims/Inquiries.html
@@ -196,7 +196,7 @@
 
 
 <!-- OffCanvas for Inquiry Sheet Start (Updated) -->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offcanvasDeafult" tabindex="-1">
+<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static" id="offCanvasInquirySheet" tabindex="-1">
     <div class="offcanvas-header bg-light">
         <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" id="offCanvasInquirySheetCloseButton" type="button"><i class="fas fa-times"></i></button>
         <div class="container d-flex gap-3" style="width: 65%;">
