--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -438,9 +438,13 @@
 
             </tr>
             <tr>
-                <td class="fw-bold w-50 text-center" colspan="2">Employee Status</td>
-                <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 text-center" readonly value="Working" >
+                <td class="fw-bold w-25" colspan="">Highest Education Qualification</td>
+                <td class="" colspan="">
+                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Doctorate (PhD)" >
+                </td>
+                <td class="fw-bold w-25" colspan="">Employee Status</td>
+                <td class="" colspan="">
+                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Working" >
                 </td>
 
             </tr>
