--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -379,72 +379,72 @@
             <tbody class="small align-middle">
             <tr>
                 <td class="fw-bold w-25">Full Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="Kasun Malhara"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="Kasun Malhara"></td>
                 <td class="fw-bold w-25">Calling Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="Kasun"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="Kasun"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">NIC Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0" readonly value="983151108V">
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="983151108V">
                 </td>
                 <td class="fw-bold w-25">Date of Birth</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="1998-11-10"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="1998-11-10"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Gender</td>
                 <td class="w-25">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" name="employeeGender" type="radio" value="Male" checked disabled >
+                        <input class="form-check-input employeeSheetInputs" name="employeeGender" type="radio" value="Male" checked disabled >
                         <label class="form-check-label opacity-100" for="employeeGenderMale">Male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input"  name="employeeGender" type="radio" value="Female" disabled>
+                        <input class="form-check-input employeeSheetInputs"  name="employeeGender" type="radio" value="Female" disabled>
                         <label class="form-check-label opacity-100" for="employeeGenderFemale">Female</label>
                     </div>
                 </td>
                 <td class="fw-bold w-25">Email Address</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="eamalindu@gmail.com"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="eamalindu@gmail.com"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Mobile Number</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0" readonly value="0768008003">
+                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" readonly value="0768008003">
                 </td>
                 <td class="fw-bold w-25">Land Number</td>
-                <td><input class="small rounded-0 form-control-sm border-0" readonly value="0768008003"></td>
+                <td><input class="small rounded-0 form-control-sm border-0  employeeSheetInputs" readonly value="0768008003"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Address</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="No: 9/3, Kaththota, Nittambuwa">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="No: 9/3, Kaththota, Nittambuwa">
                 </td>
 
             </tr>
             <tr>
                 <td class="fw-bold w-25">Civil Status</td>
                 <td class="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Single">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="Single">
                 </td>
                 <td class="fw-bold w-25">Designation</td>
                 <td class="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Manager">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="Manager">
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Note</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="" placeholder="Optional">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="" placeholder="Optional">
                 </td>
 
             </tr>
             <tr>
                 <td class="fw-bold w-25" colspan="">Highest Education Qualification</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Doctorate (PhD)" >
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="Doctorate (PhD)" >
                 </td>
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100" readonly value="Working" >
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" readonly value="Working" >
                 </td>
 
             </tr>
