rowView() function edited

--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -394,11 +394,11 @@
                 <td class="fw-bold w-25">Gender</td>
                 <td class="w-25">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input employeeSheetInputs" name="employeeGender" id="employeeSheetGenderMale" type="radio" value="Male" checked disabled >
+                        <input class="form-check-input employeeSheetInputs" name="employeeGender" id="employeeSheetGenderMale" type="radio" value="Male"  disabled >
                         <label class="form-check-label opacity-100" for="employeeGenderMale">Male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input employeeSheetInputs"  name="employeeGender" id="employeeSheetGenderFemale" type="radio" value="Female" disabled>
+                        <input class="form-check-input employeeSheetInputs"  name="employeeGender" id="employeeSheetGenderFemale" type="radio" value="Female" checked disabled>
                         <label class="form-check-label opacity-100" for="employeeGenderFemale">Female</label>
                     </div>
                 </td>
