--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -365,7 +365,7 @@
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info </button>
             <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnEmployeeSheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update </button>
         </div>
-        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Employee Details <span>#EMP001</span></h3>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Employee Details <span id="EmployeeSheetEmpID">#EMP001</span></h3>
     </div>
     <div class="offcanvas-body">
         <div class="container-fluid text-end mb-2 px-0 d-flex align-items-center">
