--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -365,13 +365,13 @@
             <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info </button>
             <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnEmployeeSheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update </button>
         </div>
-        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Employee Details <span id="EmployeeSheetEmpID">#EMP001</span></h3>
+        <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Employee Details <span id="employeeSheetEmpIDText">#EMP001</span></h3>
     </div>
     <div class="offcanvas-body">
         <div class="container-fluid text-end mb-2 px-0 d-flex align-items-center">
             <div class="text-center w-75 me-5">
-                <span class="align-items-center display-3 text-danger" style="text-transform: uppercase;font-weight: bold;font-family: Arial, serif;">Kasun</span>
-                <p class="text-muted small lh-sm">Joined On 2023-11-10</p>
+                <span class="align-items-center display-3 text-danger" id="employeeSheetCallingNameText" style="text-transform: uppercase;font-weight: bold;font-family: Arial, serif;">Kasun</span>
+                <p class="text-muted small lh-sm" id="employeeSheetJoinedDateText">Joined On 2023-11-10</p>
             </div>
             <img src="resources/images/sample_profile_1.png" class="placeholder-image img-thumbnail rounded-0">
         </div>
