--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -371,7 +371,7 @@
         <div class="container-fluid text-end mb-2 px-0 d-flex align-items-center">
             <div class="text-center w-75 me-5">
                 <span class="align-items-center display-3 text-danger" id="employeeSheetCallingNameText" style="text-transform: uppercase;font-weight: bold;font-family: Arial, serif;">Kasun</span>
-                <p class="text-muted small lh-sm" id="employeeSheetJoinedDateText">Joined On 2023-11-10</p>
+                <p class="text-muted small lh-sm">Joined On <span id="employeeSheetJoinedDateText">2023-11-10</span></p>
             </div>
             <img src="resources/images/sample_profile_1.png" class="placeholder-image img-thumbnail rounded-0">
         </div>
