--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -362,7 +362,7 @@
     <div class="offcanvas-header bg-light">
         <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
         <div class="container d-flex gap-3 ms-1" style="width: 55%">
-            <button class="btn btn-sm bg-info rounded-0 text-white"><i class="fa-regular fa-pen-to-square"></i> Edit Info </button>
+            <button class="btn btn-sm bg-info rounded-0 text-white" onclick="employeeEdit()"><i class="fa-regular fa-pen-to-square"></i> Edit Info </button>
             <button class="btn btn-sm bg-warning rounded-0 text-white" id="btnEmployeeSheetUpdate"><i class="fa-solid fa-arrows-rotate"></i> Update </button>
         </div>
         <h3 class="align-items-center" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">Employee Details <span id="employeeSheetEmpIDText">#EMP001</span></h3>
