readonly replaced by disabled

--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -379,16 +379,16 @@
             <tbody class="small align-middle">
             <tr>
                 <td class="fw-bold w-25">Full Name</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetFullName" readonly value="Kasun Malhara"></td>
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetFullName" disabled value="Kasun Malhara"></td>
                 <td class="fw-bold w-25">Calling Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetCallingName" readonly value="Kasun"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetCallingName" disabled value="Kasun"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">NIC Number</td>
-                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetNIC" readonly value="983151108V">
+                <td class="w-25"><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetNIC" disabled value="983151108V">
                 </td>
                 <td class="fw-bold w-25">Date of Birth</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetDOB" readonly value="1998-11-10"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetDOB" disabled value="1998-11-10"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Gender</td>
@@ -403,49 +403,49 @@
                     </div>
                 </td>
                 <td class="fw-bold w-25">Email Address</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetEmail" readonly value="eamalindu@gmail.com"></td>
+                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetEmail" disabled value="eamalindu@gmail.com"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Mobile Number</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetMobile" readonly value="0768008003">
+                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetMobile" disabled value="0768008003">
                 </td>
                 <td class="fw-bold w-25">Land Number</td>
-                <td><input class="small rounded-0 form-control-sm border-0  employeeSheetInputs" id="employeeSheetLand" readonly value="0768008003"></td>
+                <td><input class="small rounded-0 form-control-sm border-0  employeeSheetInputs" id="employeeSheetLand" disabled value="0768008003"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Address</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetAddress" readonly value="No: 9/3, Kaththota, Nittambuwa">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetAddress" disabled value="No: 9/3, Kaththota, Nittambuwa">
                 </td>
 
             </tr>
             <tr>
                 <td class="fw-bold w-25">Civil Status</td>
                 <td class="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetCivilStatus" readonly value="Single">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetCivilStatus" disabled value="Single">
                 </td>
                 <td class="fw-bold w-25">Designation</td>
                 <td class="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetDesignation" readonly value="Manager">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetDesignation" disabled value="Manager">
                 </td>
                 </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Note</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetNote" readonly value="" placeholder="Optional">
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetNote" disabled value="" placeholder="Optional">
                 </td>
 
             </tr>
             <tr>
                 <td class="fw-bold w-25" colspan="">Highest Education Qualification</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetHighestEducation" readonly value="Doctorate (PhD)" >
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetHighestEducation" disabled value="Doctorate (PhD)" >
                 </td>
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetEmployeeStatus" readonly value="Working" >
+                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetEmployeeStatus" disabled value="Working" >
                 </td>
 
             </tr>
