employeeSheetInputs class edited

--- a/system/src/main/resources/static/resources/css/customCRM.css
+++ b/system/src/main/resources/static/resources/css/customCRM.css
@@ -301,7 +301,7 @@ select:invalid[multiple] {
 
 
 /*inquirySheetInputs class*/
-.inquirySheetInputs{
+.inquirySheetInputs,.employeeSheetInputs{
     border:1px solid transparent;
     background: white;
     color: black;
