--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -423,7 +423,11 @@
             <tr>
                 <td class="fw-bold w-25">Civil Status</td>
                 <td class="">
-                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetCivilStatus"></select>
+                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetCivilStatus">
+                        <option value="Single">Single</option>
+                        <option value="Married">Married</option>
+                        <option value="Divorced">Divorced</option>
+                    </select>
                 </td>
                 <td class="fw-bold w-25">Designation</td>
                 <td class="">
