--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -423,7 +423,7 @@
             <tr>
                 <td class="fw-bold w-25">Civil Status</td>
                 <td class="">
-                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetCivilStatus">
+                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetCivilStatus" disabled>
                         <option value="Single">Single</option>
                         <option value="Married">Married</option>
                         <option value="Divorced">Divorced</option>
@@ -431,7 +431,7 @@
                 </td>
                 <td class="fw-bold w-25">Designation</td>
                 <td class="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetDesignation" disabled value="Manager">
+                    <select id="employeeSheetDesignation" class="employeeSheetInputs form-select rounded-0 small form-select-sm" disabled></select>
                 </td>
                 </td>
             </tr>
