--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -449,7 +449,7 @@
                 </td>
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetEmployeeStatus" disabled value="Working" >
+                    <select id="employeeSheetEmployeeStatus" class="employeeSheetInputs form-select rounded-0 small form-select-sm" disabled></select>
                 </td>
 
             </tr>
