--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -445,7 +445,16 @@
             <tr>
                 <td class="fw-bold w-25" colspan="">Highest Education Qualification</td>
                 <td class="" colspan="">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetHighestEducation" disabled value="Doctorate (PhD)" >
+                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetHighestEducation" disabled>
+                        <option>Doctorate (PhD)</option>
+                        <option>Master's Degree (MA, MSc)</option>
+                        <option>Undergraduate Degree (BA, BSc)</option>
+                        <option>Higher National Diploma (HND)</option>
+                        <option>Diploma</option>
+                        <option>G.C.E A/L</option>
+                        <option>G.C.E O/L</option>
+                    </select>
+
                 </td>
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
                 <td class="" colspan="">
