employeeSheetDOB validation added

--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -385,7 +385,11 @@
                     <div class="invalid-feedback">Please provide a valid full name</div>
                 </td>
                 <td class="fw-bold w-25">Calling Name</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetCallingName" disabled value="Kasun"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetCallingName" disabled value="Kasun">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Calling Name</div>
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">NIC Number</td>
@@ -395,7 +399,11 @@
                     <div class="invalid-feedback">Please provide a valid NIC</div>
                 </td>
                 <td class="fw-bold w-25">Date of Birth</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetDOB" disabled value="1998-11-10"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetDOB" disabled value="1998-11-10" required onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}$','editedEmployee','dob')">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid DOB</div>
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Gender</td>
