--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -380,13 +380,13 @@
             <tr>
                 <td class="fw-bold w-25">Full Name</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetFullName" disabled value="Kasun Malhara" required  onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}[ ][A-Z][a-z]{2,29}$','editedEmployee','fullName')">
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetFullName" disabled value="Kasun Malhara" required  onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}[ ][A-Z][a-z]{2,29}$','editedEmployee','fullName')">
                     <div class="valid-feedback">Value Accepted</div>
                     <div class="invalid-feedback">Please provide a valid full name</div>
                 </td>
                 <td class="fw-bold w-25">Calling Name</td>
                 <td>
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetCallingName" disabled value="Kasun">
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetCallingName" disabled value="Kasun">
                     <div class="valid-feedback">Value Accepted</div>
                     <div class="invalid-feedback">Please provide a valid Calling Name</div>
                 </td>
@@ -394,13 +394,13 @@
             <tr>
                 <td class="fw-bold w-25">NIC Number</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetNIC" disabled value="983151108V" required onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedEmployee','nic')">
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetNIC" disabled value="983151108V" required onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','editedEmployee','nic')">
                     <div class="valid-feedback">Value Accepted</div>
                     <div class="invalid-feedback">Please provide a valid NIC</div>
                 </td>
                 <td class="fw-bold w-25">Date of Birth</td>
                 <td>
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetDOB" disabled value="1998-11-10" required onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}$','editedEmployee','dob')">
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetDOB" disabled required onkeyup="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}$','editedEmployee','dob')">
                     <div class="valid-feedback">Value Accepted</div>
                     <div class="invalid-feedback">Please provide a valid DOB</div>
                 </td>
@@ -418,27 +418,27 @@
                     </div>
                 </td>
                 <td class="fw-bold w-25">Email Address</td>
-                <td><input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetEmail" disabled value="eamalindu@gmail.com"></td>
+                <td><input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetEmail" disabled value="eamalindu@gmail.com"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Mobile Number</td>
                 <td class="w-25">
-                    <input class="small rounded-0 form-control-sm border-0 employeeSheetInputs" id="employeeSheetMobile" disabled value="0768008003">
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetMobile" disabled value="0768008003">
                 </td>
                 <td class="fw-bold w-25">Land Number</td>
-                <td><input class="small rounded-0 form-control-sm border-0  employeeSheetInputs" id="employeeSheetLand" disabled value="0768008003"></td>
+                <td><input class="small rounded-0 form-control-sm  employeeSheetInputs" id="employeeSheetLand" disabled value="0768008003"></td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Address</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetAddress" disabled value="No: 9/3, Kaththota, Nittambuwa">
+                    <input class="small rounded-0 form-control-sm w-100 employeeSheetInputs" id="employeeSheetAddress" disabled value="No: 9/3, Kaththota, Nittambuwa">
                 </td>
 
             </tr>
             <tr>
                 <td class="fw-bold w-25">Civil Status</td>
                 <td class="">
-                    <select class="employeeSheetInputs form-select rounded-0 small form-select-sm" id="employeeSheetCivilStatus" disabled>
+                    <select class="employeeSheetInputs form-select small form-select-sm" id="employeeSheetCivilStatus" disabled>
                         <option value="Single">Single</option>
                         <option value="Married">Married</option>
                         <option value="Divorced">Divorced</option>
@@ -453,7 +453,7 @@
             <tr>
                 <td class="fw-bold w-25">Note</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm border-0 w-100 employeeSheetInputs" id="employeeSheetNote" disabled value="" placeholder="Optional">
+                    <input class="small rounded-0 form-control-sm w-100 employeeSheetInputs" id="employeeSheetNote" disabled value="" placeholder="Optional">
                 </td>
 
             </tr>
