--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -418,7 +418,11 @@
                     </div>
                 </td>
                 <td class="fw-bold w-25">Email Address</td>
-                <td><input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetEmail" disabled value="eamalindu@gmail.com"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetEmail" disabled value="eamalindu@gmail.com" required onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','editedEmployee','email')">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Email</div>
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Mobile Number</td>
