--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -432,7 +432,11 @@
                     <div class="invalid-feedback">Please provide a valid Mobile number</div>
                 </td>
                 <td class="fw-bold w-25">Land Number</td>
-                <td><input class="small rounded-0 form-control-sm  employeeSheetInputs" id="employeeSheetLand" disabled value="0768008003"></td>
+                <td>
+                    <input class="small rounded-0 form-control-sm employeeSheetInputs" id="employeeSheetLand" disabled value="0768008003">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Land number</div>
+                </td>
             </tr>
             <tr>
                 <td class="fw-bold w-25">Address</td>
