--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -441,7 +441,7 @@
             <tr>
                 <td class="fw-bold w-25">Address</td>
                 <td class="" colspan="3">
-                    <input class="small rounded-0 form-control-sm w-100 employeeSheetInputs" id="employeeSheetAddress" disabled value="No: 9/3, Kaththota, Nittambuwa">
+                    <input class="small rounded-0 form-control-sm w-100 employeeSheetInputs" id="employeeSheetAddress" disabled value="No: 9/3, Kaththota, Nittambuwa" required >
                     <div class="valid-feedback">Value Accepted</div>
                     <div class="invalid-feedback">Please provide a valid Address</div>
                 </td>
