--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -461,6 +461,8 @@
                 <td class="fw-bold w-25">Designation</td>
                 <td class="">
                     <select id="employeeSheetDesignation" class="employeeSheetInputs form-select rounded-0 small form-select-sm" disabled></select>
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Designation</div>
                 </td>
                 </td>
             </tr>
