--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -470,6 +470,8 @@
                 <td class="fw-bold w-25">Note</td>
                 <td class="" colspan="3">
                     <input class="small rounded-0 form-control-sm w-100 employeeSheetInputs" id="employeeSheetNote" disabled value="" placeholder="Optional">
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Note</div>
                 </td>
 
             </tr>
