--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -487,6 +487,8 @@
                         <option>G.C.E A/L</option>
                         <option>G.C.E O/L</option>
                     </select>
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Qualification</div>
 
                 </td>
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
