--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -494,6 +494,8 @@
                 <td class="fw-bold w-25" colspan="">Employee Status</td>
                 <td class="" colspan="">
                     <select id="employeeSheetEmployeeStatus" class="employeeSheetInputs form-select rounded-0 small form-select-sm" disabled></select>
+                    <div class="valid-feedback">Value Accepted</div>
+                    <div class="invalid-feedback">Please provide a valid Qualification</div>
                 </td>
 
             </tr>
