--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -193,13 +193,13 @@
     <div class="offcanvas-body">
         <div class="card border-0">
             <div class="card-body border-0">
-                <form onsubmit="return false">
+                <form onsubmit="return false" id="frmNewEmployee">
                     <div class="mb-3">
                         <img src="" id="imgProfile" class="placeholder-image img-thumbnail rounded-0 mx-auto d-block" alt="...">
                     </div>
                     <div class="mb-2">
                         <label for="employeeProfile" class="form-label fw-bold small required">Profile Photo</label>
-                        <input class="form-control rounded-0 small newEmployeeInputs" type="file" id="employeeProfile" accept="image/png, image/jpeg" required>
+                        <input class="form-control rounded-0 small newEmployeeInputs" type="file" id="employeeProfile" accept="image/png, image/jpeg" required onchange="newEmployee.photoPath=this.value">
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -213,7 +213,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeCallingName">Calling Name</label>
                         </div>
-                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeCallingName" required>
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeCallingName" onkeyup="newEmployee.callingName=this.value" required>
                         <div class="valid-feedback">Value Accepted</div>
                         <div class="invalid-feedback">Please provide a valid calling name</div>
                     </div>
@@ -240,12 +240,12 @@
 
                         <div class="form-check form-check-inline">
                             <input class="form-check-input newEmployeeInputs" id="employeeGenderMale" name="employeeGender" type="radio"
-                                   value="Male">
+                                   value="Male" onchange="newEmployee.gender=this.value">
                             <label class="form-check-label" for="employeeGenderMale"  style="font-size: 13px">Male</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input newEmployeeInputs" id="employeeGenderFemale" name="employeeGender" type="radio"
-                                   value="Female">
+                                   value="Female" onchange="newEmployee.gender=this.value">
                             <label class="form-check-label" for="employeeGenderFemale" style="font-size: 13px">Female</label>
                         </div>
                     </div>
