--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -285,7 +285,7 @@
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeHighestEducation">Highest Educational Qualification</label>
                         </div>
-                        <select class="form-select rounded-0" id="employeeHighestEducation" required data-placeholder="Please Select a Highest Educational Qualification"  onchange="selectStaticValueValidator(this,'','newEmployee','highestEducationalQualification')">
+                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeHighestEducation" required data-placeholder="Please Select a Highest Educational Qualification"  onchange="selectStaticValueValidator(this,'','newEmployee','highestEducationalQualification')">
                             <option value=""></option>
                             <option>Doctorate (PhD)</option>
                             <option>Master's Degree (MA, MSc)</option>
