--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -186,7 +186,7 @@
     <div class="offcanvas-header bg-light">
         <div>
             <button aria-label="Close" class="btn btn-sm btn-danger btn-close-red rounded-0" id="offCanvasEmployeeCloseButton" data-bs-dismiss="offcanvas" type="button"><i class="fas fa-times"></i></button>
-            <button class="btn btn-sm bg-secondary text-white rounded-0" type="button"><i class="fas fa-refresh"></i></button>
+            <button class="btn btn-sm bg-secondary text-white rounded-0" type="button" onclick="resetInquiryForm()"><i class="fas fa-refresh"></i></button>
         </div>
         <h3 class="float-end" style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New Employee</h3>
     </div>
